--- a/property-search-api/tsconfig.json
+++ b/property-search-api/tsconfig.json
@@ -30,10 +30,15 @@
         "types": [
             "jest",
             "node"
+        ],
+        "typeRoots": [
+            "node_modules/@types",
+            "src/types"
         ]
     },
     "include": [
         "src/**/*",
+        "src/types/**/*.d.ts",
         "jest-globals.d.ts"
     ],
     "exclude": [
